--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-markdown": "^7.1.2",
+    "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
+    "rehype-raw": "^6.1.1",
+    "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
